--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,242 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>{{siteName}}</title>
+    <script src="https://unpkg.com/vue"></script>
+    <link rel="stylesheet" type="text/css" href="../src/assets/css/app.css" />
+    <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+            integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+            crossorigin="anonymous"
+    >
   </head>
+
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <div id="app">
+
+      <header>
+        <div class="navbar navbar-default">
+          <div class="navbar-header">
+            <h1>{{siteName}}</h1>
+          </div>
+        </div>
+
+        <div class="nav navbar-nav navbar-right cart">
+          <button type="button" class="btn btn-default btn-lg" @click="showCheckout">
+            Купить
+            <span class="glyphicon glyphicon-shopping-cart">{{cartItemCount}}</span>
+          </button>
+        </div>
+      </header>
+
+      <main>
+        <div class="row" v-if="showProduct">
+          <div class="col-md-2 col-md-offset-1">
+            <figure><img alt="Kitty Food"></figure>
+          </div>
+
+          <div class="col-md-6 col-md-offset-2 description">
+            <h1 v-text="product.title"></h1>
+            <p v-html="product.description"></p>
+            <p class="price">{{ product.price | formatPrice }}</p>
+            <button class="default" @click="addToCart" v-if="canAddToCArt">Add to cart</button>
+          </div>
+        </div>
+
+        <div class="row" v-else>
+          <div class="form-group">
+            <div class="col-md-4">
+              <strong>First Name:</strong>
+              <input v-model="order.firstName" class="form-control" />
+            </div>
+
+            <div class="col-md-4">
+              <strong>LastName:</strong>
+              <input v-model="order.lastName" class="form-control">
+            </div>
+
+            <div class="col-md-4">
+              <strong>Adress:</strong>
+              <input v-model="order.adress" class="form-control">
+            </div>
+
+            <div class="col-md-6">
+              <strong>City:</strong>
+              <input v-model="order.city" class="form-control">
+            </div>
+
+            <div class="col-md-6">
+              <strong>State:</strong>
+              <input v-model="order.state" class="form-control">
+            </div>
+          </div>
+
+          <div class="col-md-12 boxes">
+            <input type="checkbox"
+                   id="gift"
+                   value="true"
+                   :true-value="order.sendGift"
+                   :false-value="order.dontSendGift"
+                   v-model="order.gift"
+            ><label for="gift">Ship As A Gift?</label>
+          </div>
+          <div class="form-group">
+          </div>
+
+          <div class="col-md-12 boxes">
+            <input type="radio"
+                   id="home"
+                   :value="order.home"
+                   v-model="order.method"
+            ><label for="home">Home</label>
+            <input type="radio"
+                   id="business"
+                   :value="order.business"
+                   v-model="order.method"
+            ><label for="business">Business</label>
+          </div>
+          <div class="form-group">
+          </div>
+
+          <div class="form-group">
+            <div class="col-md-12">
+              <button type="submit" class="btn btn-primary submit" @click="submitForm">Заказать</button>
+            </div>
+          </div>
+
+          <div class="col-md-12 verify">
+            <pre>
+              FirstName:  {{order.firstName}}
+              LastName:   {{order.lastName}}
+              Adress:     {{order.adress}}
+              City:       {{order.city}}
+              State:      {{order.state}}
+              Method:     {{order.method}}
+              Gift:       {{order.gift}}
+            </pre>
+          </div>
+
+        </div>
+
+      </main>
+
+    </div>
+
+    <script>
+      const APP_LIFECYCLE_EVENTS = false;
+      let webstore = new Vue({
+        el: '#app',
+        data() {
+          return {
+            siteName: 'Vue.js Pet Deport',
+            product: {
+              id: 1001,
+              title: "Жрачка для котов",
+              description: "Котячая <em>жратва</em>, коты крутые",
+              price: 20000000,
+              image: "../src/assets/images/foodCat.jpg",
+              availableInventory: 5,
+            },
+            cart: [],
+            showProduct: true,
+            order: {
+              firstName: '',
+              lastName: '',
+              adress: '',
+              city: '',
+              state: '',
+              method: 'Home Adress',
+                home: 'Home Adress',
+                business: 'Business Adress',
+              gift: 'Send As A Gift',
+                sendGift: 'Send As A Gift',
+                dontSendGift: 'Do Not Send As A Gift',
+            }
+          }
+        },
+        computed: {
+          cartItemCount() {
+            return this.cart.length || '';
+          },
+          canAddToCArt() {
+            return this.product.availableInventory > this.cartItemCount;
+          },
+      },
+        filters: {
+          formatPrice(price) {
+            if (!parseInt(price)) {
+              return "";
+            }
+            if (price > 99999) {
+              let priceString = (price / 100).toFixed(2);
+              let priceArray = priceString.split("").reverse();
+              let index = 3;
+              while (priceArray.length > index +3) {
+                priceArray.splice(index + 3, 0, " ");
+                index += 4;
+              }
+
+              return "$" + priceArray.reverse().join("");
+            } else {
+              return "$" + (price /100).toFixed(2);
+            }
+          }
+        },
+        methods: {
+          addToCart() {
+            this.cart.push(this.product.id);
+          },
+          showCheckout() {
+            this.showProduct = this.showProduct ? false : true;
+          },
+          submitForm() {
+            alert('Submitted');
+          }
+        },
+        beforeCreate: () => {
+          if (APP_LIFECYCLE_EVENTS) {
+            console.log('before create');
+          }
+        },
+        created: () => {
+          if (APP_LIFECYCLE_EVENTS) {
+            console.log('created');
+          }
+        },
+        beforeMount: () => {
+          if (APP_LIFECYCLE_EVENTS) {
+            console.log('before mount');
+          }
+        },
+        mounted: () => {
+          if (APP_LIFECYCLE_EVENTS) {
+            console.log('mounted');
+          }
+        },
+        beforeUpdate: () => {
+          if (APP_LIFECYCLE_EVENTS) {
+            console.log('before update');
+          }
+        },
+        updated: () => {
+          if (APP_LIFECYCLE_EVENTS) {
+            console.log('updated');
+          }
+        },
+        beforeDestroy: () => {
+          if (APP_LIFECYCLE_EVENTS) {
+            console.log('before destroy');
+          }
+        },
+        destroyed: () => {
+          if (APP_LIFECYCLE_EVENTS) {
+            console.log('destroy');
+          }
+        }
+      });
+    </script>
   </body>
 </html>
