--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
 
 <html lang="en">
-<head>
-    <title>Pet Deport</title>
-    <script src="https://unpkg.com/vue"></script>
-    <link rel="stylesheet" type="text/css" href="./app.css" />
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-          crossorigin="anonymous"
-    >
-</head>
-
-<body>
-    <div id="app">
-
-    </div>
-
-    <script>
-
-    </script>
-</body>
-
+    <head>
+        <title>Pet Deport</title>
+        <script src="https://unpkg.com/vue"></script>
+        <link rel="stylesheet"
+              href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+              integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+              crossorigin="anonymous"
+        >
+    </head>
+    <body>
+        <div id="app"></div>
+        <script></script>
+    </body>
 </html>
